title & pay margins to gap, padding size fixed

--- a/src/components/SalaryInfo/SalaryInfo.scss
+++ b/src/components/SalaryInfo/SalaryInfo.scss
@@ -5,9 +5,10 @@
 .salary {
   width: 23.063rem;
   height: fit-content;
-  padding: 1rem;
+  padding: 1.9375rem;
   border-radius: 0.625rem;
   background: $color-white;
+  //colour changed to closest instead of rgb
   box-shadow: 0px 1.25rem 2.5rem $color-grey-light;
 
   &__heading {
@@ -37,14 +38,24 @@
     justify-content: space-between;
   }
 
+  &__titles {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+  }
+
   &__title {
-    margin-bottom: 0.6rem;
     font-weight: $font-weight-bold;
     color: $color-teal;
   }
 
+  &__pays {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+  }
+
   &__pay {
-    margin-bottom: 0.6rem;
     text-align: end;
     font-weight: $font-weight-bold;
     color: $color-blue-navy-dark;
